src/objects/Project_Area_Type__c.object
<CustomObject>
    <fields>
        <fullName>Area_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Type</label>
        <referenceTo>Area_Type__c</referenceTo>
        <relationshipLabel>Project Area Types</relationshipLabel>
        <relationshipName>Project_Area_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Area Types</relationshipLabel>
        <relationshipName>Project_Area_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Area__c</fullName>
        <label>Unique Area</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unit_of_Measurement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit of Measurement</label>
        <referenceTo>Global_Unit_Of_Measurement__c</referenceTo>
        <relationshipLabel>Project Area Types</relationshipLabel>
        <relationshipName>Project_Area_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nAreaTypeIID__c</fullName>
        <label>nAreaTypeIID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nUOMIID__c</fullName>
        <label>nUOMIID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Area Type</label>
    <nameField>
        <label>Project Area Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Area Types</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>